--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <meta charset="UTF-8" />
+  <title>Stardew Tools</title>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -8,7 +9,7 @@
   />
 </head>
 
-<body>
+<body onload="getTableFromLocalStorage()">
   <div class="container" style="width: 30rem">
     <br />
     <br />
@@ -67,8 +68,30 @@
         <h2 class="card-title text-center" id="profitPerDay"></h2>
       </div>
     </div>
+    <br />
+    <br />
+    <div class="form-group">
+      <input type="text" placeholder="Borówki sadzone pierwszego dnia" class="form-control" id="addToTableName" />
+    </div>
+    <br />
+    <button type="button" class="btn btn-primary" onclick="saveToTable()">Dodaj aktualny wynik do tabeli</button>
+    <br />
+    <br />
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">Nazwa</th>
+          <th scope="col">Ilość dni do ostatniego zbioru</th>
+          <th scope="col">Przychód za wszystkie zbiory łącznie</th>
+          <th scope="col">Dochód za wszystkie zbiory łącznie</th>
+          <th scope="col">Przychód dzienny</th>
+          <th scope="col">Dochód dzienny</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody id="saved-tbody"></tbody>
+    </table>
   </div>
-
   <script>
     const calculateProfitPerPlant = (
       pricePerHarvest,
@@ -85,7 +108,7 @@
       return { daysToLatestHarvest, incomePerPlant, profitPerPlant, incomePerDay, profitPerDay };
     };
 
-    const tryRecalculate = () => {
+    const getResults = () => {
       const pricePerHarvest = parseInt(document.getElementById("pricePerHarvest").value);
       const harvestsQuantity = parseInt(document.getElementById("harvestsQuantity").value);
       const seedsPrice = parseInt(document.getElementById("seedsPrice").value);
@@ -99,12 +122,68 @@
         daysToFirstHarvest,
         daysToNextHarvests
       );
+      return result;
+    };
 
+    const tryRecalculate = () => {
+      var result = getResults();
       document.getElementById("daysToLatestHarvest").innerText = result.daysToLatestHarvest;
       document.getElementById("incomePerPlant").innerText = result.incomePerPlant;
       document.getElementById("profitPerPlant").innerText = result.profitPerPlant;
       document.getElementById("incomePerDay").innerText = result.incomePerDay;
       document.getElementById("profitPerDay").innerText = result.profitPerDay;
+    };
+
+    var tableItems = [];
+
+    const saveToTable = () => {
+      let results = getResults();
+      let name = document.getElementById("addToTableName").value;
+      results.name = name;
+      tableItems.push(results);
+      refreshTable();
+    };
+
+    const deleteFromTable = (name) => {
+      tableItems = tableItems.filter((x) => x.name !== name);
+      refreshTable();
+    };
+
+    const refreshTable = () => {
+      let tbody = document.getElementById("saved-tbody");
+      tbody.innerHTML = "";
+      for (let item of tableItems) {
+        let row = document.createElement("tr");
+        row.appendChild(document.createElement("td")).innerText = item.name;
+        row.appendChild(document.createElement("td")).innerText = item.daysToLatestHarvest;
+        row.appendChild(document.createElement("td")).innerText = item.incomePerPlant;
+        row.appendChild(document.createElement("td")).innerText = item.profitPerPlant;
+        row.appendChild(document.createElement("td")).innerText = item.incomePerDay;
+        row.appendChild(document.createElement("td")).innerText = item.profitPerDay;
+
+        let deleteTd = document.createElement("td");
+        let deleteButton = document.createElement("button");
+        deleteButton.className = "btn btn-danger";
+        deleteButton.onclick = () => deleteFromTable(item.name);
+        deleteButton.innerText = "Usuń";
+        deleteTd.appendChild(deleteButton);
+        row.appendChild(deleteTd);
+
+        tbody.appendChild(row);
+      }
+      saveTableToLocalStorage();
+    };
+
+    const saveTableToLocalStorage = () => {
+      localStorage.setItem("tableItems", JSON.stringify(tableItems));
+    };
+
+    const getTableFromLocalStorage = () => {
+      tableItems = JSON.parse(localStorage.getItem("tableItems"));
+      if (tableItems === null) {
+        tableItems = [];
+      }
+      refreshTable();
     };
   </script>
 </body>
